# AI-Interview-Tutor

./: .gitignore  .pre-commit-config.yaml  README.md  SOLUTION.md  pyproject.toml
analyze-service/: Dockerfile  config.yaml  (+2 more)
interview-service/: pyproject.toml
interview-service/src/: config.py
interview-service/src/agent/: config.py  llm.py  logger.py  main.py  sample_data.py  state.py  utils.py  workflow.py
interview-service/src/agent/data/: sample_data.py  soft_questions.json
interview-service/src/agent/domain/models/: cv_data.py  interview_state.py
interview-service/src/agent/domain/value_objects/: interview_stage.py
interview-service/src/agent/prompts/: hard_question.py
interview-service/src/agent/state/: evaluate_answer.py  greeting.py  hard_question.py  question_router.py  small_talk.py  soft_question.py  soft_questions.py  start_interview.py  wrap_up.py
interview-service/src/agent/utils/: format_cv.py  format_messages.py
interview-service/src/api/v1/: router.py
interview-service/src/api/v1/endpoints/: interview.py
interview-service/src/domain/models/: cv_data.py  interview_state.py
interview-service/src/domain/value_objects/: interview_stage.py  skills.py
interview-service/src/infrastructure/: mongo.py
interview-service/src/models/: user_profile.py
libs/jwt_handler/: config.yaml  pyproject.toml  setup.py
libs/jwt_handler/jwt_handler/: config.py
libs/jwt_handler/jwt_handler/abstractions/: __init__.py  abstract_access_token_generator.py  abstract_refresh_token_generator.py  abstract_token_handler.py
libs/jwt_handler/jwt_handler/dtos/: __init__.py  token.py
libs/jwt_handler/jwt_handler/exceptions/: __init__.py
libs/jwt_handler/jwt_handler/generators/: __init__.py  access_token_generator.py  refresh_token_generator.py
libs/jwt_handler/jwt_handler/handlers/: __init__.py  token_handler.py
libs/jwt_handler/jwt_handler/interfaces/: __init__.py  access_token_generator.py  refresh_token_generator.py  token_handler.py
libs/jwt_handler/jwt_handler/models/: __init__.py  tokens.py
libs/jwt_handler/jwt_handler/value_objects/: __init__.py  auth_type.py  token_payload.py
user-management-service/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  config.yaml  docker-compose.yaml  pyproject.toml
user-management-service/src/: config.py  main.py
user-management-service/src/api/dependencies/: auth.py  database.py  redis.py  use_cases.py
user-management-service/src/api/dependencies/use_cases/: auth.py  current_user.py
user-management-service/src/api/v1/: router.py
user-management-service/src/api/v1/endpoints/: auth.py  current_user.py
user-management-service/src/api/v1/models/: tokens.py  user.py
user-management-service/src/application/dtos/: token.py  user.py
user-management-service/src/application/mappers/: user_mapper.py
user-management-service/src/domain/entities/: user.py
user-management-service/src/domain/exceptions/: login_errors.py  token_errors.py  user_errors.py
user-management-service/src/domain/value_objects/: token_payload.py  user_role.py
user-management-service/src/infrastructure/auth/: password_handler.py  token_handler.py
user-management-service/src/infrastructure/logger/: logger.py
user-management-service/src/infrastructure/postgres/: uow.py
user-management-service/src/infrastructure/redis/: redis_client.py
user-management-service/src/migrations/: env.py
user-management-service/src/migrations/versions/: 0167f6ba46f8_add_users_table.py
user-management-service/tests/integration_tests/: conftest.py
user-management-service/tests/integration_tests/auth/: test_signup.py
(+44 files in other folders)
