[tool.poetry]
name = "ai-interview-tutor"
version = "0.1.0"
description = ""
authors = ["Aliaksandr Fedaraka <fedorakooo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.3.29"
gtts = "^2.5.4"
playsound = "1.2.2"
speechrecognition = "^3.14.3"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
mypy = "^1.16.0"
ruff = "^0.12.7"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["user-management-service/src/migrations"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
