[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Aliaksander Fedaraka fedorakooo@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "poetry (>=2.1.3,<3.0.0)",
    "jwt (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.16.0"
