[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Aliaksander Fedaraka fedorakooo@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)"
]

[pyproject.toml]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.16.0"
