[tool.poetry]
name = "jwt_handler"
version = "0.1.0"
description = "A JWT token handling library for microservices"
authors = ["Aliaksandr Fedaraka <fedorakooo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
pyjwt = "2.10.1"
pydantic-settings = "2.10.1"
pydantic = "^2.11.7"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
